invalid_bool_test/invalid_bool_test_2.src
.IPPcode24
WRITE bool@0